# MIRROR-B-OOP-400-NAN-4-1-raytracer-andreas.le-tanter

./: .gitignore  CMakeLists.txt  CONFIGURATION-FILE.MD  Doxyfile  Makefile  README.md  exemple.conf  ouit  raytracer
.github/workflows/: chocolatine.yml
scenes/: basic_cone.cfg  basic_plane.cfg  basic_planes.cfg  basic_point_light.cfg  basic_sphere.cfg  basic_sphere_scene.cfg  basic_spheres.cfg  main.cfg
src/: Rectangle3D.cpp  Rectangle3D.hpp  main.cpp
src/Factory/: Factory.cpp  Factory.hpp  IFactory.hpp
src/Math/Light/: LightCalculation.cpp  LightCalculation.hpp
src/Math/Matrix4D/: Matrix4D.cpp  Matrix4D.hpp
src/Math/Point3D/: Point3D.cpp  Point3D.hpp
src/Math/Rectangle3D/: Rectangle3D.cpp  Rectangle3D.hpp
src/Math/Vector3D/: Vector3D.cpp  Vector3D.hpp
src/Parser/: IParser.hpp  Parser.cpp  Parser.hpp
src/RayTracer/Camera/: Camera.cpp  Camera.hpp
src/RayTracer/Light/: ILight.hpp  ILights.hpp  Light.cpp  Light.hpp
src/RayTracer/Light/AmbiantLight/: AmbiantLight.cpp  AmbiantLight.hpp
src/RayTracer/Light/AmbientLight/: AmbientLight.cpp  AmbientLight.hpp
src/RayTracer/Light/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.hpp
src/RayTracer/Light/PointLight/: PointLight.cpp  PointLight.hpp
src/RayTracer/Objects/: AObjects.cpp  AObjects.hpp  IObjects.hpp  text
src/RayTracer/Objects/Cone/: Cone.cpp  Cone.hpp
src/RayTracer/Objects/Cylinder/: Cylinder.cpp  Cylinder.hpp  LCylinder.cpp  LCylinder.hpp
src/RayTracer/Objects/Cylindre/: Cylinder.cpp  Cylinder.hpp  Cylindre.cpp  FCylinder.cpp  LCylinder.cpp
src/RayTracer/Objects/Plane/: Plane.cpp  Plane.hpp
src/RayTracer/Objects/Sphere/: Sphere.cpp  Sphere.hpp
src/RayTracer/Ray/: Ray.cpp  Ray.hpp
src/RayTracer/Renderer/: Renderer.cpp  Renderer.hpp
src/RayTracer/Sphere/: Sphere.cpp  Sphere.hpp
src/RayTracer/Viewer/: Viewer.cpp  Viewer.hpp
